--- a/eventman/bin/eventman_defalt/templates/part_page.html
+++ b/eventman/bin/eventman_defalt/templates/part_page.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Participant Registration | Event Manager</title>
+<style>
+.part{
+  position: relative;
+  animation-name: example;
+  animation-duration: 1s;
+}
+
+@keyframes example {
+  0%   {top:200px;}
+  100% {top:0px;}
+}
+</style>
 </head>
 <body style="
 margin: 0px;
@@ -32,6 +44,7 @@ margin: 0px;
 background-image: url('{% static "part.jpeg" %}');
 background-size:cover;display:flex;align-items:center;font-family:'Helvetica',sans-serif;">
      <div
+        class="part"
         style="
         height : auto;
         width: 30vw;
@@ -105,9 +118,9 @@ background-size:cover;display:flex;align-items:center;font-family:'Helvetica',sa
         </form>
         </div>
     </div>
-    <div id="eventdetls" style="
+    <div class='part' style="
         max-height : 70%;
-        width: auto;
+        min-width: 40%;
         background:rgba(0,0,0,0.3);
         backdrop-filter: saturate(180%) blur(10px);
         border-radius: 25px;
